@@ -1,5 +1,7 @@
 package testapi;
 
+import io.restassured.internal.util.IOUtils;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
@@ -8,7 +10,9 @@ public class AbstractTest {
 
     protected String getResourceAsString(String resource) throws IOException {
         InputStream inputStream = getClass().getResourceAsStream(resource);
-        byte[] bytes = inputStream.readAllBytes();
+     //   byte[] bytes = inputStream.readAllBytes();
+
+        byte[] bytes = IOUtils.toByteArray(inputStream);
         return new String(bytes);
     }
 
